--- a/BabyPlan/views/index.jade
+++ b/BabyPlan/views/index.jade
@@ -2,4 +2,17 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p 电脑当前状态 
+    div(class="switch" data-on="danger" data-off="primary")
+       input(type="checkbox" checked)
+  div.container
+      div.row
+          div.col-xs-6.col-md-4 
+             button( type="button" class="btn btn-primary") 关闭网络 
+          div.col-xs-6.col-md-4 
+             button( type="button" class="btn btn-info") 关闭电脑
+          div.col-xs-6.col-md-4 
+             button( type="button" class="btn btn-danger") 关闭游戏
+      div.row
+         div.switch.switch-large(data-on="danger",data-off="primary")
+            input(type="checkbox" checked)
