--- a/BabyPlan/views/layout.jade
+++ b/BabyPlan/views/layout.jade
@@ -1,7 +1,40 @@
-doctype 5
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+doctype html
+
+head(lang="zh-cn")
+     mate( charset="utf-8" )
+     meta(name="viewport",content="width=device-width, initial-scale=1.0")
+     title 'pretty_online'
+     link(href='stylesheets/style.css', type='text/css', rel="stylesheet")
+     link(href='dist/css/bootstrap.css', type='text/css', rel="stylesheet")
+     link(href='dist/css/bootstrap-switch.css', type='text/css', rel="stylesheet")
+     link(href='dist/css/sticky-footer-navbar.css',type='text/css', rel="stylesheet")
+   body
+    div#wrap
+        div.navbar.navbar-default.navbar-fixed-top(role="navigation")
+            div.container
+                div.navbar-header
+                    button.navbar-toggle(type="button", data-toggle="collapse", data-target=".navbar-collapse")                           
+                    a.navbar-brand(href="/index") BabyPlan
+                div.collapse.navbar-collapse
+                    ui.nav.navbar-nav
+                       li: a(href="/index") 首页
+                       li.dropdown: a.dropdown-toggle(data-toggle="dropdown",href="") 帮 助
+                                      b.caret
+                                      ul.dropdown-menu
+                                         li: a(href="/log/help.txt",target="_blank") 使用说明                                        
+                                         li: a(href="/log/about.txt",target="_blank") 关于我们
+                    ui.nav.navbar-nav.navbar-right
+                       li: a(href='/logout') 退出
+                       li: a 上次登录：2014年5月26日
+        block content
+
+    div#footer
+        div.container
+            address
+                  a(href="mailto:zwl0017@163.com") chunyu.zhao 
+                  p 二〇一四年五月二十六日 
+    script(type='text/javascript',src="dist/js/jquery.min.js")
+    script(type='text/javascript',src="dist/js/bootstrap.min.js")
+   script(type='text/javascript',src="dist/js/bootstrap-switch.js") 
+
+    block extjs
