--- a/BabyPlan/views/index.jade
+++ b/BabyPlan/views/index.jade
@@ -10,7 +10,7 @@ block content
           div.col-xs-6.col-md-4 
              button( type="button" class="btn btn-primary") 关闭网络 
           div.col-xs-6.col-md-4 
-             button( type="button" class="btn btn-info") 关闭电脑
+             button( type="button" class="btn btn-info") 电脑锁频
           div.col-xs-6.col-md-4 
              button( type="button" class="btn btn-danger") 关闭游戏
       div.row
