--- a/BabyPlan/views/index.jade
+++ b/BabyPlan/views/index.jade
@@ -3,36 +3,77 @@ block head
             link(href='dist/css/bootstrap-switch.css', type='text/css', rel="stylesheet")
 block content
   h1= title
-
   div.container
-      div.row
-            div.switch.has-switch(data-on-label="关机" data-off-label="开机")
-                  input(type="checkbox"  checked  name='check')           
-      div.row
-             div.col-lg-5
-                p 当前电脑状态: 
-                  div.switch.has-switch
-                        input(type="checkbox"  checked  name='check' data-on-text="关机" data-off-text="开机")           
-      div.row
-          div.col-lg-10
-                div.col-xs-6.col-md-2 
-                       button( type="button" class="btn btn-primary") 重启电脑 
-                div.col-xs-6.col-md-2
-                        button( type="button" class="btn btn-info") 电脑锁屏
-                div.col-xs-6.col-md-2 
-                        button( type="button" class="btn btn-success") 禁止网络
-      p
-      div.row
-          div.col-lg-10
-                div.col-xs-6.col-md-3 
-                        button( type="button" class="btn btn-warning") 禁止网络游戏
-                div.col-xs-6.col-md-3
-                        button( type="button" class="btn btn-danger") 禁止单机游戏
+   div.row
+    div.col-lg-5
+                 div.switch.has-switch 设备A:
+                        input(type="checkbox"  checked  name='check' data-on-text="已开启" data-off-text="已关闭")           
+   div.row
+    div.col-lg-8
+     div.table-responsive
+      table.table.table-bordered.table-striped
+        colgroup
+          col.col-xs-1
+          col.col-xs-8
+          col.col-xs-4
+          col.col-xs-1
+        thead
+          tr
+            th 功能
+            th 描述
+            th 状态
+            th 功能
+        tbody
+          tr
+            td
+              button( type="button" class="btn btn-primary" id="reboot") 重启电脑
+            td
+              点击电脑将重新启动
+            td
+             a#rebootmes
+            td
+              button( type="button" class="btn btn-primary" id="close" style="margin:3% ;color: #CCC;background-color: #39307C") 关闭电脑  
+          tr
+            td
+              button( type="button" class="btn btn-info" id="lockscreen") 电脑锁屏
+            td
+              点击电脑将锁屏，锁屏密码将在右端显示，也可使用电脑解锁
+            td
+              a#screenmes 
+            td
+              button( type="button" class="btn btn-primary" id="openscreen" style="margin:3% ;color: #CCC;background-color: #39307C") 解锁电脑                 
+          tr
+            td
+              button( type="button" class="btn btn-success" id="nonetwork") 禁止网络
+            td
+              点击电脑将无法上网。将禁止所有网络功能。
+            td
+              a#networkmes
+            td
+              button( type="button" class="btn btn-success" id="network" style="margin:3% ;color: #CCC;background-color: #39307C") 开启网络  
 
-      div.row
+          tr
+            td
+              button( type="button" class="btn btn-warning" id="nolinegame") 禁止网络游戏
+            td
+              可正常上网，但无法玩网络游戏，也无法玩网页版游戏。
+            td
+              a#linegamemes
+            td
+              button( type="button" class="btn btn-warning" id="linegame" style="margin:3% ;color: #CCC;background-color: #39307C") 允许网络游戏          
+          tr
+            td
+              button( type="button" class="btn btn-danger" id="nosinglegame") 禁止单机游戏
+            td
+              电脑中的单机游戏将无法玩。
+            td
+              a#singlegamemes
+            td
+              button( type="button" class="btn btn-danger" id="singlegame" style="margin:3% ;color: #CCC;background-color: #39307C") 允许单机游戏    
 
-       script(src="dist/js/bootstrap-switch.js") 
-       script.
+        script(src="dist/js/bootstrap-switch.js")
+        script(type='text/javascript',src="dist/js/doit.js") 
+        script.
                       $("[name='check']").bootstrapSwitch();    
-       script.
+        script.
              $('#switch').on('switch-change', function (e, data) {   var $el = $(data.el)  , value = data.value;  console.log(e, $el, value);});
