--- a/BabyPlan/views/index.jade
+++ b/BabyPlan/views/index.jade
@@ -32,7 +32,7 @@ block content
             td
              a#rebootmes
             td
-              button( type="button" class="btn btn-primary" id="close" style="margin:3% ;color: #CCC;background-color: #39307C") 关闭电脑  
+              button( type="button" class="btn btn-primary" id="close" style="margin:3% ;color: #C7D225;background-color: #6E4ED7") 关闭电脑  
           tr
             td
               button( type="button" class="btn btn-info" id="lockscreen") 电脑锁屏
@@ -41,7 +41,7 @@ block content
             td
               a#screenmes 
             td
-              button( type="button" class="btn btn-primary" id="openscreen" style="margin:3% ;color: #CCC;background-color: #39307C") 解锁电脑                 
+              button( type="button" class="btn btn-primary" id="openscreen" style="margin:3% ;color: #C7D225;background-color: #6E4ED7") 解锁电脑                 
           tr
             td
               button( type="button" class="btn btn-success" id="nonetwork") 禁止网络
@@ -50,7 +50,7 @@ block content
             td
               a#networkmes
             td
-              button( type="button" class="btn btn-success" id="network" style="margin:3% ;color: #CCC;background-color: #39307C") 开启网络  
+              button( type="button" class="btn btn-success" id="network" style="margin:3% ;color: #C7D225;background-color: #6E4ED7") 开启网络  
 
           tr
             td
@@ -60,7 +60,7 @@ block content
             td
               a#linegamemes
             td
-              button( type="button" class="btn btn-warning" id="linegame" style="margin:3% ;color: #CCC;background-color: #39307C") 允许网络游戏          
+              button( type="button" class="btn btn-warning" id="linegame" style="margin:3% ;color: #C7D225;background-color: #6E4ED7") 允许网络游戏          
           tr
             td
               button( type="button" class="btn btn-danger" id="nosinglegame") 禁止单机游戏
@@ -69,7 +69,7 @@ block content
             td
               a#singlegamemes
             td
-              button( type="button" class="btn btn-danger" id="singlegame" style="margin:3% ;color: #CCC;background-color: #39307C") 允许单机游戏    
+              button( type="button" class="btn btn-danger" id="singlegame" style="margin:3% ;color: #C7D225;background-color: #6E4ED7") 允许单机游戏    
 
         script(src="dist/js/bootstrap-switch.js")
         script(type='text/javascript',src="dist/js/doit.js") 
