--- a/BabyPlan/views/index.jade
+++ b/BabyPlan/views/index.jade
@@ -2,76 +2,70 @@ extends layout
 block head
             link(href='dist/css/bootstrap-switch.css', type='text/css', rel="stylesheet")
 block content
-  h1= title
-  div.container
-   div.row
-    div.col-lg-5
-                 div.switch.has-switch 设备A:
-                        input(type="checkbox"  checked  name='check' data-on-text="已开启" data-off-text="已关闭")           
-   div.row
-    div.col-lg-8
-     div.table-responsive
-      table.table.table-bordered.table-striped
-        colgroup
-          col.col-xs-1
-          col.col-xs-8
-          col.col-xs-4
-          col.col-xs-1
-        thead
-          tr
-            th 功能
-            th 描述
-            th 状态
-            th 功能
-        tbody
-          tr
-            td
-              button( type="button" class="btn btn-primary" id="reboot") 重启电脑
-            td
-              点击电脑将重新启动
-            td
-             a#rebootmes
-            td
-              button( type="button" class="btn btn-primary" id="close" style="margin:3% ;color: #C7D225;background-color: #6E4ED7") 关闭电脑  
-          tr
-            td
-              button( type="button" class="btn btn-info" id="lockscreen") 电脑锁屏
-            td
-              点击电脑将锁屏，锁屏密码将在右端显示，也可使用电脑解锁
-            td
-              a#screenmes 
-            td
-              button( type="button" class="btn btn-primary" id="openscreen" style="margin:3% ;color: #C7D225;background-color: #6E4ED7") 解锁电脑                 
-          tr
-            td
-              button( type="button" class="btn btn-success" id="nonetwork") 禁止网络
-            td
-              点击电脑将无法上网。将禁止所有网络功能。
-            td
-              a#networkmes
-            td
-              button( type="button" class="btn btn-success" id="network" style="margin:3% ;color: #C7D225;background-color: #6E4ED7") 开启网络  
-          tr
-            td
-              button( type="button" class="btn btn-warning" id="nolinegame") 禁止网络游戏
-            td
-              可正常上网，但无法玩网络游戏，也无法玩网页版游戏。
-            td
-              a#linegamemes
-            td
-              button( type="button" class="btn btn-warning" id="linegame" style="margin:3% ;color: #C7D225;background-color: #6E4ED7") 允许网络游戏          
-          tr
-            td
-              button( type="button" class="btn btn-danger" id="nosinglegame") 禁止单机游戏
-            td
-              电脑中的单机游戏将无法玩。
-            td
-              a#singlegamemes
-            td
-              button( type="button" class="btn btn-danger" id="singlegame" style="margin:3% ;color: #C7D225;background-color: #6E4ED7") 允许单机游戏    
-        script(src="dist/js/bootstrap-switch.js")
-        script(type='text/javascript',src="dist/js/doit.js") 
-        script.
-                      $("[name='check']").bootstrapSwitch();    
-        script.
-             $('#switch').on('switch-change', function (e, data) {   var $el = $(data.el)  , value = data.value;  console.log(e, $el, value);});
+ div.container-fluid
+  div.row-fluid
+    div.span12
+      div#carousel-255431.carousel.slide
+        ol.carousel-indicators
+          li(data-slide-to='0', data-target='#carousel-255431')
+          li(data-slide-to='1', data-target='#carousel-255431')
+          li(data-slide-to='2', data-target='#carousel-255431')
+        div.carousel-inner
+          div.item.next.left
+            img(alt='', src='http://www.bootcss.com/p/layoutit/img/1.jpg')
+            div.carousel-caption
+              h4
+                | 棒球
+              p
+                | 棒球运动是一种以棒打球为主要特点，集体性、对抗性很强的球类运动项目，在美国、日本尤为盛行。
+          div.item
+            img(alt='', src='http://www.bootcss.com/p/layoutit/img/2.jpg')
+            div.carousel-caption
+              h4
+                | 冲浪
+              p
+                | 冲浪是以海浪为动力，利用自身的高超技巧和平衡能力，搏击海浪的一项运动。运动员站立在冲浪板上，或利用腹板、跪板、充气的橡皮垫、划艇、皮艇等驾驭海浪的一项水上运动。
+          div.item.active.left
+            img(alt='', src='http://www.bootcss.com/p/layoutit/img/3.jpg')
+            div.carousel-caption
+              h4
+                | 自行车
+              p
+                | 以自行车为工具比赛骑行速度的体育运动。1896年第一届奥林匹克运动会上被列为正式比赛项目。环法赛为最著名的世界自行车锦标赛。
+        a.left.carousel-control(data-slide='prev', href='#carousel-255431') ‹
+        a.right.carousel-control(data-slide='next', href='#carousel-255431') ›
+
+      ul.thumbnails
+        li.span4
+          div.thumbnail
+            img(alt='300x200', src='http://www.bootcss.com/p/layoutit/img/people.jpg')
+            div.caption
+              h3
+                | 冯诺尔曼结构
+              p
+                | 也称普林斯顿结构，是一种将程序指令存储器和数据存储器合并在一起的存储器结构。程序指令存储地址和数据存储地址指向同一个存储器的不同物理位置。
+              p
+                a.btn.btn-primary(href='#') 浏览
+                a.btn(href='#') 分享
+        li.span4
+          div.thumbnail
+            img(alt='300x200', src='http://www.bootcss.com/p/layoutit/img/city.jpg')
+            div.caption
+              h3
+                | 哈佛结构
+              p
+                | 哈佛结构是一种将程序指令存储和数据存储分开的存储器结构，它的主要特点是将程序和数据存储在不同的存储空间中，进行独立编址。
+              p
+                a.btn.btn-primary(href='#') 浏览
+                a.btn(href='#') 分享
+        li.span4
+          div.thumbnail
+            img(alt='300x200', src='http://www.bootcss.com/p/layoutit/img/sports.jpg')
+            div.caption
+              h3
+                | 改进型哈佛结构
+              p
+                | 改进型的哈佛结构具有一条独立的地址总线和一条独立的数据总线，两条总线由程序存储器和数据存储器分时复用，使结构更紧凑。
+              p
+                a.btn.btn-primary(href='#') 浏览
+                a.btn(href='#') 分享
