--- a/BabyPlan/views/layout.jade
+++ b/BabyPlan/views/layout.jade
@@ -33,7 +33,7 @@ head(lang="zh-cn")
         block content
 
     div#footer
-        div.container
+        div.container(align="center")
             address
                   a(href="mailto:zwl0017@163.com") chunyu.zhao 
                   p 二〇一四年五月二十六日 
