--- a/BabyPlan/views/index.jade
+++ b/BabyPlan/views/index.jade
@@ -115,25 +115,25 @@ html(lang='en')
      .row
        .col-lg-4
          img.img-circle(src='./image/4.jpg', alt='Generic placeholder image', style='width: 140px; height: 140px;')
-         h2 Heading
+         h2 管 理
          p
-           | Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
+           | 具备多年管理经验和管理理论，在人才招聘和团队建设上具有专业管理方式。
          p
-           a.btn.btn-default(href='#', role='button') View details »
+           a.btn.btn-default(href='#', role='button') 了解更多 »
        .col-lg-4
          img.img-circle(src='./image/5.jpg', alt='Generic placeholder image', style='width: 140px; height: 140px;')
-         h2 Heading
+         h2 产 品
          p
-           | Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+           | 在产品设计和技术开发，后期测试和技术支持上均有专业团队和多年工作经验，各负责人曾经均在各公司担任要职。
          p
-           a.btn.btn-default(href=' #', role='button') View details »
+           a.btn.btn-default(href=' #', role='button') 了解更多 »
        .col-lg-4
          img.img-circle(src='./image/6.jpg', alt='Generic placeholder image', style='width: 140px; height: 140px;')
-         h2 Heading
+         h2 运 营
          p
-           | Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+           | 一体化运营流程，简单明了，负责人在潇洒和市场营销上具备8年工作经验。
          p
-           a.btn.btn-default(href=' #', role='button') View details »
+           a.btn.btn-default(href=' #', role='button') 了解更多 »
      hr.featurette-divider
      .row.featurette
        .col-md-7
